css control for responsive minimaps

--- a/assets/control.layers.minimap.custom.css
+++ b/assets/control.layers.minimap.custom.css
@@ -1,6 +1,14 @@
 .leaflet-container .leaflet-control-attribution {
     background: rgba(255, 255, 255, 0.85);
 }
+.leaflet-control-container {
+    height: 100%;
+    width: 100%;
+}
+.leaflet-control-container .leaflet-top.leaflet-left {
+    height: 100%;
+    width: 100%;
+}
 .leaflet-control-layers-expanded.leaflet-control-layers-minimap {
     width: 30%;
     min-width: 180px;
@@ -23,7 +31,7 @@
     height: 40%;
   }
 }
-@media  only screen and (max-width: 230px),
+@media only screen and (max-width: 230px),
  only screen and (max-width: 260px) and (max-height: 600px),
  only screen and (max-width: 300px) and (max-height: 500px),
  only screen and (max-width: 350px) and (max-height: 400px),
