css control for responsive attributions, adaptative texts (#9)

--- a/assets/control.layers.minimap.custom.css
+++ b/assets/control.layers.minimap.custom.css
@@ -38,3 +38,28 @@
     display: none;
   }
 }
+p.long {display: inline;}
+p.med {display: none;}
+p.short {display: none;}
+p.mini {display: none;}
+@media only screen and (max-width: 650px) {
+  /* For small screens: */
+  p.long {display: none;}
+  p.med {display: inline;}
+  p.short {display: none;}
+  p.mini {display: none;}
+}
+@media only screen and (max-width: 450px) {
+  /* For very small screens: */
+  p.long {display: none;}
+  p.med {display: none;}
+  p.short {display: inline;}
+  p.mini {display: none;}
+}
+@media only screen and (max-width: 300px) {
+  /* For very small screens: */
+  p.long {display: none;}
+  p.med {display: none;}
+  p.short {display: none;}
+  p.mini {display: inline;}
+}
